eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: url-shortener
  name: service-url-shortener
  annotations:
    alb.ingress.kubernetes.io/healthcheck-port: "8000"
    alb.ingress.kubernetes.io/healthcheck-path: "/url-shortener/docs"
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-url-shortener
